--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://lauavinyo.github.io/bda",
   "dependencies": {
     "chart.js": "^4.5.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "katex": "^0.16.22",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
@@ -37,6 +38,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "tailwindcss": "^4.0.0",
+    "tsx": "^4.20.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.7"
